2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b31

	* New: Added Check for correct working __FILE__ in Config Wizard Step1.

2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b30
	
	* Bugfix: Gallery wide Slideshow were broken.

	* Change: Adjust filelist for translation.

2004-02-10  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b29

	* Made the slideshow.php page modular by selectively incuding either the
	  applet, high or low version. Also better homogeneity between high and
	  low versions.
	* Introduced a cookie that keeps the user's preference for which slideshow
	  to use.
	* Added support in the slideshow applet for honoring settings for number
	  of images, randomness and recursiveness.

	High regression potential, please test slideshow intensively.

2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b28

	* Bugfix: Fixed a quoting bug which causes a Javascript error in some popps.
		  This Bug was reintroduced with my phpBB2 merges in 1.4.3-cvs-b2.

	* Change: Added new function for setting Default Language Values.

	* Bugfix: When comments_anonymous = "no" not logged in users couldnt make comments.

	* Bugfix: Highlight Album was an option even if the subalbum has no photo.

	* Change: Little GUI enhancements.

2004-02-09  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b27

	* Add additional security check to prevent geeklog integration from
	  opening up a remote exploit

2004-02-10 Don Willingham <donwillingham@users.sourceforge.net> 1.4.3-cvs-b26

	* Fix a parse error caused by a missing comma (,) introduced by last revision

2004-02-10 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b25 

	* New: Gallery can now run embedded in GeekLog (http://www.geeklog.net)
	  - Added New Section in Step2 to set embedded type and Geeklog Path
	  - Added GeekLog classes so that Galley uses their users.

2004-02-09  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b24

	* Fixed a bug in gallery_remote2.php which caused all directories