@@ -1,3 +1,8 @@
+2004-02-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b32
+
+	* Fixed Gallery-wide hack check, fixed gallery-wide recursion for
+	  applet slideshow.
+
 2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b31
 
 	* New: Added Check for correct working __FILE__ in Config Wizard Step1.
